# bgg_pipeline

./: .gitignore  pyproject.toml
.github/workflows/: ci.yaml
src/: database.py  models.py  pipeline.py  schemas.py
src/parsers/: html_parsers.py  xml_parsers.py
src/sources/: html_pages.py  xml_api.py
src/utils/: api_auth.py  logging_config.py  throttler.py
tests/: conftest.py  test_api_source.py  test_html_parser.py  test_html_source.py  test_parsers.py  test_schemas.py  test_smoke.py
