[project]
name = "bgg-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "George Harris"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "dask (>=2025.12.0,<2026.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "apache-airflow (>=3.1.5,<4.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
